Fixed battle result overflowing in x in mobile pages Updated Captured Text

--- a/src/pages/BattleHistory/styles.scss
+++ b/src/pages/BattleHistory/styles.scss
@@ -89,7 +89,7 @@
             }
 
             &.captured {
-                color: grey;
+                color: rgb(199, 173, 22);
             }
         }
     }
